--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 
 body {
     margin: 0;
+    overflow: hidden;
     background: linear-gradient(90deg, rgba(118,73,254,1) 0%, rgba(18,174,255,1) 100%);
   }
 
